--- a/my-vue-app/src/style.css
+++ b/my-vue-app/src/style.css
@@ -14,14 +14,19 @@
   -webkit-text-size-adjust: 100%;
 }
 
-body {
+* {
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
+}
+
+body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
   background-image: url(./assets/wallpaper.jpeg);
   background-size: cover;
+  height: 100vh;
 }
 
 h1 {
@@ -32,6 +37,10 @@ h1 {
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
+
